--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <title>Template</title>
   </head>
   <body>
+    <h1>Hello World</h1>
     <!-- main script -->
     <script src="./script.js"></script>
   </body>
