--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/media/favicons/apple-touch-icon.png"
+      href="./media/favicons/apple-touch-icon.png"
     />
     <link
       rel="icon"
